# Wasteland

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CROSS_COMPILE.md  LICENSE  README.md  SKILLS.md  build.sh  test_gl
.github/workflows/: build.yml  tag.yml
assets/: Info.plist  icon.icns  wasteland.desktop
chats/: New Chat.txt  old_chat.txt
cmake/: mingw-w64-x86_64.cmake
docs/: index.html
include/: nuklear.h
src/: agent.c  agent.h  agent_executor_main.c  agent_protocol.c  agent_protocol.h  capability.c  capability.h  crypto_engine.c  crypto_engine.h  font_dejavu.h  fs_sandbox.c  fs_sandbox.h  inference.c  inference.h  main.c  network.c  network.h  nuklear_impl.c  nuklear_sdl_gl2.h  platform_sandbox.c  platform_sandbox.h  ui.c  ui.h  verify.c  verify.h  wasteland.rc
tests/: test_agent.c  test_chat_history.c  test_framework.h  test_string_utils.c  test_version.c
